--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">Covid19</string>
+    <string name="app_name">Covid-19</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="home">Home</string>
+    <string name="home">World Case</string>
     <string name="homeCounty">Home Country</string>
     <string name="allCountry">All County</string>
+    <string name="symptoms">Symptoms</string>
+    <string name="info">Info</string>
 </resources>
